Flex gap fix on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -928,6 +928,11 @@ body.lock {
 .contacts-list__item {
     display: flex;
     align-items: center;
+    @supports (-webkit-touch-callout: none) and (not (translate: none)) {
+        &:not(:last-child) {
+          margin-bottom: 30px;
+        }
+      };
 }
 
 .contacts__icon {
